--- a/docs/docs/components/checkbox.mdx
+++ b/docs/docs/components/checkbox.mdx
@@ -7,156 +7,267 @@ Here's a quick start guide to get started with the Checkbox component, Checkboxe
 ### Importing Component
 
 import "@hover-design/react/dist/style.css";
-import { Radio, RadioGroup, Card } from "@hover-design/react";
+import { Checkbox, CheckboxGroup, Card } from "@hover-design/react";
 import {
-  RadioExample,
-  RadioGroupExample
-} from "@site/src/components/examples/RadioExample";
+  CheckboxExample,
+  CheckboxGroupExample
+} from "@site/src/components/examples/CheckboxExample";
 
-export const RadioContainer = ({ children }) => (
+export const CheckboxContainer = ({ children }) => (
   <Card variant="shadow">{children}</Card>
 );
 
 ```jsx
-import { Radio, RadioGroup } from "@hover-design/react";
+import { Checkbox, CheckboxGroup } from "@hover-design/react";
 ```
 
 ### Code Snippets and Examples
 
-##### Simple Radio
+##### Simple Checkbox
 
 ```jsx
-import { Radio, RadioGroup } from "@hover-design/react";
+import { Checkbox, CheckboxGroup } from "@hover-design/react";
 
 const Demo = () => {
-  const [radioVal, setRadioVal] = useState("apple");
+  const [checkboxVal, setCheckboxVal] = useState({
+    honeypot: false,
+    rover: false,
+    weaver: false
+  });
 
   return (
     <div>
       <label>
-        <Radio
-          name="fruits"
-          value="apple"
-          checked={radioVal == "apple"}
-          onChange={(e) => setRadioVal(e.target.value)}
-        ></Radio>
-        Apple
+        <Checkbox
+          name="antColony"
+          value="honeypot"
+          checked={checkboxVal.honeypot}
+          onChange={() =>
+            setCheckboxVal({
+              ...checkboxVal,
+              honeypot: !checkboxVal.honeypot
+            })
+          }
+        />
+        Honeypot
       </label>
       <label>
-        <Radio
-          name="fruits"
-          value="bannana"
-          checked={radioVal == "bannana"}
-          onChange={(e) => setRadioVal(e.target.value)}
-        ></Radio>
-        Bannana
+        <Checkbox
+          name="antColony"
+          value="rover"
+          checked={checkboxVal.rover}
+          onChange={() =>
+            setCheckboxVal({
+              ...checkboxVal,
+              rover: !checkboxVal.rover
+            })
+          }
+        />
+        Rover
       </label>
       <label>
-        <Radio
-          name="fruits"
-          value="orange"
-          checked={radioVal == "orange"}
-          isDisabled
-          onChange={(e) => setRadioVal(e.target.value)}
-        ></Radio>
-        Orange
+        <Checkbox
+          name="antColony"
+          value="weaver"
+          checked={checkboxVal.weaver}
+          onChange={() =>
+            setCheckboxVal({
+              ...checkboxVal,
+              weaver: !checkboxVal.weaver
+            })
+          }
+        />
+        Weaver
       </label>
     </div>
   );
 };
 ```
 
-<RadioContainer>
-  <RadioGroupExample />
-</RadioContainer>
+<CheckboxContainer>
+  <CheckboxGroupExample />
+</CheckboxContainer>
 
-##### Radio Group
-
-```jsx
-<RadioGroup orientation="vertical">
-  <label>
-    <Radio name="fruits" value="apple" checked></Radio>
-    Apple
-  </label>
-  <label>
-    <Radio name="fruits" value="bannana"></Radio>
-    Bannana
-  </label>
-  <label>
-    <Radio name="fruits" value="orange" isDisabled></Radio>
-    Orange
-  </label>
-</RadioGroup>
-```
-
-<RadioContainer>
-  <RadioGroupExample radioGroupProps={{ orientation: "vertical" }} />
-</RadioContainer>
-
-##### Radio with styles
+##### Checkbox States
 
 ```jsx
 <div>
-  <Radio
-    name="fruits"
-    value="bannana"
+  <label>
+    <Checkbox /> Unselected Checkbox
+  </label>
+  <label>
+    <Checkbox checked /> Selected Checkbox
+  </label>
+  <label>
+    <Checkbox indeterminate /> Indeterminate Checkbox
+  </label>
+  <label>
+    <Checkbox isDisabled /> Disabled Checkbox
+  </label>
+  <label>
+    <Checkbox isDisabled checked /> Disabled Selected Checkbox
+  </label>
+  <label>
+    <Checkbox isDisabled indeterminate /> Disabled Indeterminate Checkbox
+  </label>
+</div>
+```
+
+<CheckboxContainer>
+  <CheckboxGroup orientation="vertical">
+    <label style={{ fontWeight: "bold" }}>
+      <Checkbox /> Unselected Checkbox
+    </label>
+    <label style={{ fontWeight: "bold" }}>
+      <Checkbox checked /> Selected Checkbox
+    </label>
+    <label style={{ fontWeight: "bold" }}>
+      <Checkbox indeterminate /> Indeterminate Checkbox
+    </label>
+    <label style={{ fontWeight: "bold" }}>
+      <Checkbox isDisabled /> Disabled Checkbox
+    </label>
+    <label style={{ fontWeight: "bold" }}>
+      <Checkbox isDisabled checked /> Disabled Selected Checkbox
+    </label>
+    <label style={{ fontWeight: "bold" }}>
+      <Checkbox isDisabled indeterminate /> Disabled Indeterminate Checkbox
+    </label>
+  </CheckboxGroup>
+</CheckboxContainer>
+
+##### Checkbox Group
+
+```jsx
+<CheckboxGroup orientation="vertical" spacing="xl">
+  <label>
+    <Checkbox name="antColony" value="honeypot" checked />
+    Honeypot
+  </label>
+  <label>
+    <Checkbox name="antColony" value="rover" />
+    Rover
+  </label>
+  <label>
+    <Checkbox name="antColony" value="weaver" isDisabled />
+    Weaver
+  </label>
+</CheckboxGroup>
+```
+
+<CheckboxContainer>
+  <CheckboxGroupExample
+    checkboxGroupProps={{ orientation: "vertical", spacing: "xl" }}
+  />
+</CheckboxContainer>
+
+##### Checkbox with styles
+
+```jsx
+<div>
+  <Checkbox
     checked
-    radioSize="xs"
+    checkboxSize="xs"
     selectedStyles={{
-      color: "rgb(250, 250, 250)",
-      borderColor: "rgb(25, 113, 194)",
-      backgroundColor: "rgb(25, 113, 194)"
+      borderColor: "rgb(102, 168, 15)",
+      backgroundColor: "rgb(102, 168, 15)"
     }}
   />
-  <Radio name="fruits" value="orange" radioSize="sm" checked />
-  <Radio
-    name="fruits"
-    value="apple"
+  <Checkbox checkboxSize="sm" checked />
+  <Checkbox
     checked
-    radioSize="md"
+    checkboxSize="md"
     selectedStyles={{
-      color: "rgb(250, 250, 250)",
       borderColor: "rgb(224, 49, 49)",
       backgroundColor: "rgb(224, 49, 49)"
+    }}
+  />
+  <Checkbox
+    indeterminate
+    checkboxSize="md"
+    indeterminateStyles={{
+      borderColor: "rgb(240, 140, 0)",
+      backgroundColor: "rgb(240, 140, 0)"
+    }}
+  />
+  <Checkbox
+    checkboxSize="sm"
+    isDisabled
+    borderRadius="md"
+    disabledStyles={{
+      borderColor: "rgb(255, 255, 255)",
+      backgroundColor: "rgb(0, 0, 0)"
+    }}
+  />
+  <Checkbox
+    indeterminate
+    checkboxSize="xs"
+    borderRadius="xl"
+    indeterminateStyles={{
+      borderColor: "rgb(156, 54, 181)",
+      backgroundColor: "rgb(156, 54, 181)"
     }}
   />
 </div>
 ```
 
-<RadioContainer>
-  <RadioExample
+<CheckboxContainer>
+  <CheckboxExample
     checked
-    radioSize="xs"
+    checkboxSize="xs"
     selectedStyles={{
-      color: "rgb(250, 250, 250)",
-      borderColor: "rgb(25, 113, 194)",
-      backgroundColor: "rgb(25, 113, 194)"
+      borderColor: "rgb(102, 168, 15)",
+      backgroundColor: "rgb(102, 168, 15)"
     }}
   />
-  <RadioExample radioSize="sm" checked />
-  <RadioExample
+  <CheckboxExample checkboxSize="sm" checked />
+  <CheckboxExample
     checked
-    radioSize="md"
+    checkboxSize="md"
     selectedStyles={{
-      color: "rgb(250, 250, 250)",
       borderColor: "rgb(224, 49, 49)",
       backgroundColor: "rgb(224, 49, 49)"
     }}
   />
-</RadioContainer>
+  <CheckboxExample
+    indeterminate
+    checkboxSize="md"
+    indeterminateStyles={{
+      borderColor: "rgb(240, 140, 0)",
+      backgroundColor: "rgb(240, 140, 0)"
+    }}
+  />
+  <CheckboxExample
+    checkboxSize="sm"
+    isDisabled
+    borderRadius="md"
+    disabledStyles={{
+      borderColor: "rgb(255, 255, 255)",
+      backgroundColor: "rgb(0, 0, 0)"
+    }}
+  />
+  <CheckboxExample
+    indeterminate
+    checkboxSize="xs"
+    borderRadius="xl"
+    indeterminateStyles={{
+      borderColor: "rgb(156, 54, 181)",
+      backgroundColor: "rgb(156, 54, 181)"
+    }}
+  />
+</CheckboxContainer>
 
 ### Checkbox Props Reference
 
 | Key                 |              type               | Optional? |
 | :------------------ | :-----------------------------: | --------: |
-| value               |            `string;`            |        No |
-| name                |            `string;`            |        No |
-| id                  |            `string;`            |        No |
-| indeterminate       |           `boolean;`            |        No |
+| value               |            `string;`            |       Yes |
+| name                |            `string;`            |       Yes |
+| id                  |            `string;`            |       Yes |
+| indeterminate       |           `boolean;`            |       Yes |
 | isDisabled          |            `boolean`            |       Yes |
 | checkboxSize        | `xs` `sm` `md` `lg` `xl` string |       Yes |
 | borderRadius        | `xs` `sm` `md` `lg` `xl` string |       Yes |
-| icon                |        `React.ReactNode`        |       Yes |
 | baseStyles          |       `baseStyles object`       |       Yes |
 | disabledStyles      |     `disabledStyles object`     |       Yes |
 | selectedStyles      |     `selectedStyles object`     |       Yes |
@@ -164,7 +275,7 @@ const Demo = () => {
 
 ##### Customizing Checkbox Base, Selected, Indeterminate and Disabled Styles.
 
-You can customize the base, selected and disabled styles of the checkbox by passing in the baseStyles, selectedStyles, indeterminateStyles and disabledStyles props. Refer this Spec for this:
+You can customize the base, selected, indeterminate and disabled styles of the checkbox by passing in the baseStyles, selectedStyles, indeterminateStyles and disabledStyles props. Refer this Spec for this:
 
 baseStyles
 
