--- a/docs/docs/components/tooltip.mdx
+++ b/docs/docs/components/tooltip.mdx
@@ -1,158 +1,138 @@
-# Popover
+# Tooltip
 
 ### Quick start
 
-Here's a quick start guide to get started with the Popover component
+Here's a quick start guide to get started with the Tooltip component
 
 ### Importing Component
 
 ```jsx
-import { Popover } from "@hover-design/react";
+import { Tooltip } from "@hover-design/react";
 ```
 
 ### Code Snippets and Examples
 
 import "@hover-design/react/dist/style.css";
-import { Select } from "@hover-design/react";
-import { Popover } from "@hover-design/react";
+import { Tooltip } from "@hover-design/react";
 import { Button } from "@hover-design/react";
 import { useState } from "react";
 
-##### Basic Popover
+##### Basic Tooltip
 
 ```jsx
-const content = <div>Basic Popover</div>;
-
 <div className="App">
-  <Popover withArrow content={content}>
+  <Tooltip withArrow label="Basic Tooltip">
     <Button>Click To Open </Button>
-  </Popover>
-</div>;
+  </Tooltip>
+</div>
 ```
 
-<Popover withArrow content={<div>Basic Popover</div>}>
+<Tooltip withArrow label="Basic Tooltip">
   <Button>Click To Open </Button>
-</Popover>
+</Tooltip>
 
-##### Controlled Popover
+##### Controlled Tooltip
 
 ```jsx
 const [isOpened, setIsOpened] = useState(false);
-const content = <div>This is a controlled Popover</div>;
-
 <div className="App">
-  <Popover position="right" withArrow isOpened={isOpened} content={content}>
+  <Tooltip
+    position="right"
+    withArrow
+    isOpened={isOpened}
+    label="Controlled Tooltip"
+  >
     <Button
       onMouseEnter={() => setIsOpened(true)}
       onMouseLeave={() => setIsOpened(false)}
     >
       Click To Open
     </Button>
-  </Popover>
+  </Tooltip>
 </div>;
 ```
 
 export const App = () => {
   const [isOpened, setIsOpened] = useState(false);
-  const content = <div>This is a controlled Popover</div>;
   return (
-    <Popover position="right" withArrow isOpened={isOpened} content={content}>
+    <Tooltip
+      position="right"
+      withArrow
+      isOpened={isOpened}
+      label="Controlled Tooltip"
+    >
       <Button
         onMouseEnter={() => setIsOpened(true)}
         onMouseLeave={() => setIsOpened(false)}
       >
         Hover to Open
       </Button>
-    </Popover>
+    </Tooltip>
   );
 };
 
 <App />
 
+##### MultiLine Tooltip
+
+```jsx
+<div className="App">
+  <Tooltip multiLine withArrow label="This is a multiLine Tooltip">
+    <Button>Click To Open </Button>
+  </Tooltip>
+</div>
+```
+
+<Tooltip
+multiLine
+withArrow
+label="This is a multiLine Tooltip"
+>
+
+  <Button>Click To Open </Button>
+</Tooltip>
+
 ##### Target Width
 
 ```jsx
-const content = <div>Width matches the target Width</div>;
-
 <div className="App">
-  <Popover width="target" withArrow content={content}>
+  <Tooltip
+    width="target"
+    multiLine
+    withArrow
+    label="Width matches the target Width"
+  >
     <Button>Click To Open </Button>
-  </Popover>
-</div>;
+  </Tooltip>
+</div>
 ```
 
-<Popover
+<Tooltip
   width="target"
+  multiLine
   withArrow
-  content={<div>Width matches the target Width</div>}
+  label="Width matches the target Width"
 >
   <Button>Click To Open </Button>
-</Popover>
-
-##### Trap Focus
-
-```jsx
-const styles = {
-  width: "100%",
-};
-const content = (
-  <div>
-    <label>Name: </label>
-    <input style={styles} type="text" />
-    <label>Password: </label>
-    <input style={styles} type="password" />
-  </div>
-);
-
-<div className="App">
-  <Popover width="200px" position="right" trapFocus withArrow content={content}>
-    <Button>Click To Open </Button>
-  </Popover>
-</div>;
-```
-
-<Popover
-  position="right"
-  trapFocus
-  width="200px"
-  withArrow
-  content={
-    <div>
-      <label>Name: </label>
-      <input
-        style={{
-          width: "100%",
-        }}
-        type="text"
-      />
-      <label>Password: </label>
-      <input
-        style={{
-          width: "100%",
-        }}
-        type="password"
-      />
-    </div>
-  }
->
-  <Button>Click To Open </Button>
-</Popover>
+</Tooltip>
 
 ### Props Reference
 
 | Attributes   |                                                                                                                Values                                                                                                                 | Default Value | Optional ? |
 | :----------- | :-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: | :-----------: | ---------: |
 | position     | ` "bottom"` &#124; `"left"` &#124; `"right"` &#124; `"top"` &#124; `"bottom-end"`&#124; `"bottom-start"`&#124; `"left-end"` &#124; `"left-start"` &#124; `"right-end"` &#124; `"right-start"` &#124; `"top-end"` &#124; `"top-start"` |   `bottom`    |        Yes |
-| content      |                                                                                                            `JSX.Element `                                                                                                             |               |         No |
-| isOpened     |                                                                                                      `boolean` controlled value                                                                                                       |    `false`    |        Yes |
-| offset       |                                                                                         `string` distance between Popover and Target element                                                                                          |     `4px`     |        Yes |
+| label        |                                                                                                            `JSX.Element `                                                                                                             |               |         No |
+| isOpened     |                                                                                                    `boolean`<br/> controlled value                                                                                                    |    `false`    |        Yes |
+| offset       |                                                                                       `string`<br/> distance between Tooltip and Target element                                                                                       |     `4px`     |        Yes |
 | borderRadius |                                                                                                               `string`                                                                                                                |     `4px`     |        Yes |
-| width        |                                                                                                               `string`                                                                                                                | `fit-content` |        Yes |
+| width        |                                                                                                               `string`                                                                                                                |  `fit-label`  |        Yes |
 | withArrow    |                                                                                                               `boolean`                                                                                                               |    `false`    |        Yes |
 | arrowSize    |                                                                                                               `string`                                                                                                                |     `7px`     |        Yes |
 | onChange     |                                                                                                          `(isOpened)=>void`                                                                                                           |   `()=>{}`    |        Yes |
 | zIndex       |                                                                                                               `string`                                                                                                                |      `1`      |        Yes |
-| trapFocus    |                                                                                                               `boolean`                                                                                                               |    `false`    |        Yes |
+| color        |                                                                                                               `string`                                                                                                                |   `#2C2E33`   |        Yes |
+| multiLine    |                                                                                                               `boolean`                                                                                                               |     false     |        Yes |
+| labelColor   |                                                                                                               `string`                                                                                                                |    `white`    |        Yes |
 
 ### Keyboard Controls
 
