--- a/docs/docs/components/select.mdx
+++ b/docs/docs/components/select.mdx
@@ -244,25 +244,25 @@ const options = [
 
 ### Props Reference
 
-| Attributes        |                                                 Values                                                  |  Default Value   | Optional ? |
-| :---------------- | :-----------------------------------------------------------------------------------------------------: | :--------------: | ---------: |
-| placeholder       |                                                `string`                                                 |    `Pick one`    |        Yes |
-| options           |                                     `Array of` **_Option Object_**                                      |                  |         No |
-| value             | `string` &#124; `number` <br/> when isMulti is `true` then value is <br/> `(string` &#124; ` number)[]` |                  |        Yes |
-| isMulti           |                                                `boolean`                                                |     `false`      |        Yes |
-| color             |                                                `string`                                                 |    `#2F80ED`     |        Yes |
-| width             |                                                `string`                                                 |      `100%`      |        Yes |
-| isSearchable      |                                                `boolean`                                                |     `false`      |        Yes |
-| error             |                                                `boolean`                                                |     `false`      |        Yes |
-| maxDropDownHeight |                                                `string`                                                 |      `auto`      |        Yes |
-| borderRadius      |                                                `string`                                                 |       `0`        |        Yes |
-| onChange          |                                     `(selectedOption,event)=>void`                                      |     `()=>{}`     |        Yes |
-| isDisabled        |                                                `boolean`                                                |     `false`      |        Yes |
-| isClearable       |                                                `boolean`                                                |     `false`      |        Yes |
-| nothingFoundLabel |                                      `string` &#124; `JSX Element`                                      | `Nothing Found!` |        Yes |
-| DropIcon          |                                              `JSX Element`                                              |                  |        Yes |
-| onDropDownOpen    |                                              `()=> void `                                               |                  |        Yes |
-| onDropDownClose   |                                              `()=> void `                                               |                  |        Yes |
+| Attributes        |                                                                 Values                                                                  |  Default Value   | Optional ? |
+| :---------------- | :-------------------------------------------------------------------------------------------------------------------------------------: | :--------------: | ---------: |
+| placeholder       |                                                                `string`                                                                 |    `Pick one`    |        Yes |
+| options           |                                            `Array of` **_[Options Object](#option-object)_**                                            |                  |         No |
+| value             | **_[Options Object](#option-object)_** <br/> when isMulti is `true` then value is <br/> Array of **_[Options Object](#option-object)_** |                  |        Yes |
+| isMulti           |                                                                `boolean`                                                                |     `false`      |        Yes |
+| color             |                                                                `string`                                                                 |    `#2F80ED`     |        Yes |
+| width             |                                                                `string`                                                                 |      `100%`      |        Yes |
+| isSearchable      |                                                                `boolean`                                                                |     `false`      |        Yes |
+| error             |                                                                `boolean`                                                                |     `false`      |        Yes |
+| maxDropDownHeight |                                                                `string`                                                                 |      `auto`      |        Yes |
+| borderRadius      |                                                                `string`                                                                 |       `0`        |        Yes |
+| onChange          |                                                     `(selectedOption,event)=>void`                                                      |     `()=>{}`     |        Yes |
+| isDisabled        |                                                                `boolean`                                                                |     `false`      |        Yes |
+| isClearable       |                                                                `boolean`                                                                |     `false`      |        Yes |
+| nothingFoundLabel |                                                      `string` &#124; `JSX Element`                                                      | `Nothing Found!` |        Yes |
+| DropIcon          |                                                              `JSX Element`                                                              |                  |        Yes |
+| onDropDownOpen    |                                                              `()=> void `                                                               |                  |        Yes |
+| onDropDownClose   |                                                              `()=> void `                                                               |                  |        Yes |
 
 ### Option Object
 
